--- a/MyWeather.html
+++ b/MyWeather.html
@@ -101,7 +101,7 @@
       </ul>
 
       <button>Change city</button>
-      <p>Coded by Queen Olabanji</p>
+      <p>Coded by Demi Olabanji </p>
     </section>
     <script>
       function greetUser() {
